# lumenplus

./: .gitignore  README.md  apply_phase1.py  docker-compose.override.yml  docker-compose.yml  test_api.py
backend/: Dockerfile  Makefile  README.md  docker-compose.yml  grant_permission.py  mvp_check.ps1  pyproject.toml  requirements.txt  start.sh  start_dev.ps1
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_phase1_cadastro.py  003_fix_catalogs_and_profile.py  004_inbox_org_scope.py  005_user_permissions.py  006_fix_org_unit_type_enum.py  007_fix_org_units_type_column.py  008_profile_extra_fields.py  009_legal_documents_v1.py  009_retreat_module.py  010_legal_documents_v1_1.py  010_retreat_permission.py  011_legal_documents_v1_2.py  012_add_analista_role.py  013_privacy_v1_3_dpo.py  016_retreat_houses_fees.py  017_retreat_eligibility_service.py  018_retreat_service_teams.py  019_retreat_coordinators.py  020_org_unit_retreat_scope.py  021_profile_music_fields.py  022_add_performance_indexes.py  023_life_plan_module.py  024_truncate_life_plan_data.py
backend/app/: legal_content.py  main.py  settings.py
backend/app/api/: admin_retreat_routes.py  admin_routes.py  deps.py  dev_routes.py  inbox_routes.py  legal_routes.py  profile_routes.py  (+5 more)
backend/lumen_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: ensure_schema.py  seed_dev.py
backend/tests/: conftest.py  test_audit.py  test_auth.py  test_health.py  test_legal.py  test_me.py  test_membership.py  test_org_expand.py  test_profile.py  test_sensitive_access.py
(+136 files in other folders)
