[project]
name = "lumen-backend"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "redis>=5.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.28.0",
    "cachetools>=5.5.0",
    "structlog>=24.4.0",
    "cryptography>=44.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.8.0", "mypy>=1.13.0"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
